Fri Nov 10 10:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp:
          Const changes and use prefix operators instead of postfix

        * ace/Process.cpp:
          Use prefix increment instead of postfix

        * ace/Reactor.cpp (timer_queue):
          No need to use an intermediate variable

Fri Nov 10 05:47:15 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/bczar/bczar.html

          Updates to release script documentation.

Thu Nov  9 20:07:42 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          A follow up to my change from "Wed Nov 8 22:12:46". Adding the
          close_svcs() call in ACE_Service_Config::close() ensured that
          the repository and its contents gets properly finalized, but it
          did not account for the potential subsequent re-opening of the
          Service Config. This causes failures in open/close/open
          scenarios, like Framework_Component_Test.

Thu Nov  9 19:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_aix4_cset++.GNU:
        * include/makeinclude/platform_integrity_ghs.GNU:
        * include/makeinclude/platform_irix6.x_sgic++.GNU:
        * include/makeinclude/platform_linux_pgi.GNU:
        * include/makeinclude/platform_macosx_panther.GNU:
        * include/makeinclude/platform_macosx_tiger.GNU:
        * include/makeinclude/platform_netbsd.GNU:
        * include/makeinclude/platform_openbsd.GNU:
        * include/makeinclude/platform_osf1_4.x_rcc.GNU:
        * include/makeinclude/platform_vxworks5.x_ghs.GNU:
          Simplified these files using the ?= operator

Thu Nov 09 16:10:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/Service_Config.cpp:

          Reverted my earlier change of Nov 6 and additionally removed