@@ -873,7 +873,7 @@ public:
 
   /// Returns true if Reactor has been successfully initialized, else
   /// false.
-  virtual int initialized (void);
+  virtual bool initialized (void);
 
   /// Returns the current size of the Reactor's internal descriptor
   /// table.
